Fix mobile view search result spacing
Fixes #695

Aligns the caret-toggle with left-edge of grid. Resizes geoblacklight-icons and positions them along baseline.

--- a/app/assets/stylesheets/geoblacklight/modules/icon-customization.scss
+++ b/app/assets/stylesheets/geoblacklight/modules/icon-customization.scss
@@ -2,7 +2,7 @@
 
 .geoblacklight-icon {
   color: $gray-600;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .geoblacklight-stanford {
